[project]
name = "feature_opt"
version = "0.0.1"
authors = [
    {name="matthieu.glotz", email="matthieu.glotz@gmail.com"},
]
description="A hyperparametrization framework to jointly optimize model, features, and data sampling"
readme="README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Languages :: Python :: 3",
    "Licence :: OSI Approved :: GNU Public Licence",
    "Operating System : OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/matthieuglotz/feature_opt"

[build-system]
requires=[
    "setuptools>=61.0",
    "numpy>=1.20.0",
    "pandas>=1.0.4",
    "scipy==1.1.0",
    "scikit-optimize==0.9.0",
    "scikit-learn==1.0.2",
]
build-backend="setuptools.build_meta"
